# rust_e_commerce

./: .env  Cargo.toml  README.md  clickhouse-no-password.xml  docker-compose.yml  rust_e_commerce.json
logs/: out_of_stock_log.jsonl
src/: db.rs  main.rs
src/email/: notifier.rs
src/handlers/: auth_handler.rs  mod.rs  order_handler.rs  product_handler.rs  report_handler.rs
src/middleware/: auth.rs
src/models/: auth.rs  mod.rs  order.rs  product.rs  report.rs
src/routes/: auth_routes.rs  mod.rs  order_routes.rs  product_routes.rs  report_routes.rs
src/utils/: jwt.rs  kafka.rs  kafka_consumer.rs  kafka_stock_consumer.rs  mod.rs
