[package]
name = "e_commerce"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.29", features = ["serde"] }
sqlx = { version = "0.7", features = ["mysql", "runtime-tokio-rustls", "chrono", "macros" ,"uuid", "rust_decimal"] }
dotenvy = "0.15"

bigdecimal = { version = "0.4", features = ["serde"] }

validator = { version = "0.16", features = ["derive"] }
validator_derive = "0.16"

bcrypt = "0.15"
jsonwebtoken = "9"
futures-util = "0.3.31"
rdkafka = "0.37.0"
clickhouse = "0.13.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
lettre = { version = "0.11", default-features = false, features = ["tokio1-native-tls", "smtp-transport", "builder"] }
cookie = "0.18.1"

